<resources>
    <string name="app_name">OPSC7311</string>
    <string name="signInToYourAccount">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="forgotYourPassword">Forgot your password?</string>
    <string name="signUpForFree">Sign up for free</string>
    <string name="noAccount">No Account?</string>
    <string name="signIn">Sign in</string>
    <string name="previousPage">Previous page</string>
    <string name="password">Password</string>
    <string name="fullName">Full Name</string>
    <string name="backToSignIn">Back to sign in</string>
    <string name="timeDivers">Time Divers™</string>
    <string name="inviteMember">Invite Member</string>
    <string name="enterAnEmailAddress">Enter an email address</string>
    <string name="role">Role</string>
    <string name="selectARole">Select a role</string>
    <string name="projects">Projects</string>
    <string name="selectProjects">Select projects</string>
    <string name="sendInvite">Send invite</string>
    <string name="createAProject">Create A Project</string>
    <string name="projectDetails">Project Details:</string>
    <string name="projectName">Project Name:</string>
    <string name="colour">Colour</string>
    <string name="client">Client:</string>
    <string name="startDate">Start Date: </string>
    <string name="endDate">End Date:</string>
    <string name="budget">Budget:</string>
    <string name="hourlyRate">Hourly Rate:</string>
    <string name="dashboard">Dashboard</string>
    <string name="createProject">Create Project</string>
    <string name="viewReport">View Report</string>
    <string name="today">Today</string>
    <string name="thisWeek">This week</string>
    <string name="projectAndWorkOrders">Projects and Work orders</string>
    <string name="timeSheet">TimeSheet</string>
    <string name="timeEntries">Time entries:</string>
    <string name="screenshots">Screenshots:</string>
    <string name="projectsSummary">Projects summary</string>
    <string name="calendar">Calendar</string>
    <string name="newEntry">NEW ENTRY</string>
    <string name="note">Note</string>
    <string name="loggedTime">Logged time</string>
    <string name="fromAndTo">From and To</string>
    <string name="startTimer">Start Timer</string>
    <string name="recentProjects">RECENT PROJECTS</string>
    <string name="createNew">Create New</string>
    <string name="bankingApp">Banking App</string>
    <string name="communication">Communication</string>
    <string name="general">General</string>
    <string name="projectTimer">Project timer</string>
    <string name="projectsAndWorkOrders">Projects and work orders</string>
    <string name="report">Report</string>
    <string name="weeklyTotals">Weekly totals</string>
    <string name="manageProjects">Manage Projects</string>
    <string name="goals">goals</string>
    <string name="assignee">ASSIGNEE</string>
    <string name="quarter">QUARTER</string>
    <string name="status">STATUS</string>
    <string name="due">DUE</string>
    <string name="progress">PROGRESS</string>
    <string name="onTrack">ON TRACK</string>
    <string name="complete">COMPLETE</string>
    <string name="planned">PLANNED</string>
    <string name="moreOptions">More Options</string>
    <string name="territory">Territory</string>
    <string name="prize">Prize:</string>
    <string name="target">Target</string>
    <string name="signUp">Sign up</string>
    <string name="current_time">Your Current Time Text Here</string>
    <string name="sendInstructions">Send Instructions</string>
    <string name="notifications">Notifications</string>
    <string name="noNewsYetCheckBackSoon">No News Yet! Check Back Soon</string>
    <string name="profile">Profile</string>
    <string name="backToDashboard">Back To Dashboard</string>
    <string name="whenFeatureIsImplemented">When feature is implemented, a graph comparing the user to others doing the same tasks will be available</string>
    <string name="them">THEM</string>
    <string name="you">YOU</string>
    <string name="TargetHours">Targer Hours: 120 hours</string>
    <string name="oneFreeHalfDay">One free half-day</string>
    <string name="backToMoreOptions">Back To More Options</string>
    <string name="project_det">
Project Details
</string>
    <string name="project_nam">
Project Name:
</string>


    <string-array name="user_array">
        <item>Peter</item>
        <item>Bryan</item>
        <item>Brian</item>
        <item>Patricia</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="create_a_pr">Create a project</string>
    <string name="Color">Color</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>