<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CreateProject">


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="420dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_78" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="652dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168"
        app:srcCompat="@drawable/rectangle_78" />

    <TextView
        android:id="@+id/create_a_pr"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/create_a_pr"
        android:textAppearance="@style/create_a_pr"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/project_det"
        android:layout_width="124dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/project_det"
        android:textAppearance="@style/project_det"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="129dp" />

    <TextView
        android:id="@+id/project_nam"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/project_nam"
        android:textAppearance="@style/project_nam"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/project_startdate"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/startDate"
        android:textAppearance="@style/project_nam"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="337dp" />

    <TextView
        android:id="@+id/project_budget"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/budget"
        android:textAppearance="@style/project_nam"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="450dp" />

    <TextView
        android:id="@+id/project_client"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/client"
        android:textAppearance="@style/project_nam"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="285dp" />

    <TextView
        android:id="@+id/project_enddate"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/endDate"
        android:textAppearance="@style/project_nam"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="393dp" />

    <TextView
        android:id="@+id/project_hrlyrate"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/hourlyRate"
        android:textAppearance="@style/project_nam"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="504dp" />

    <TextView
        android:id="@+id/project_color"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/Color"
        android:textAppearance="@style/project_nam"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="234dp" />


</androidx.constraintlayout.widget.ConstraintLayout>